Added basic flexbox layout

--- a/index.html
+++ b/index.html
@@ -16,16 +16,20 @@
       secretly the king of puns, we’ve got you covered.
     </p>
 
+    <div class="flex-container">
+<div class="drink-container">
     <button id="random-drink-button">Make me a drink!</button>
     <h2 id="drink-title"></h2>
     <ul id="ingredients"></ul>
     <p id="instructions"></p>
     <img class="drink-image" src="" alt="" />
+  </div>
 
-    <br>
-
+  <div class="joke-container">
     <button id="random-dad-joke-button">Get a Dad Joke</button>
     <p id="dad-joke"></p>
+  </div>
+</div>
 
     <script src="/script.js"></script>
   </body>
