Made one button instead of two

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 
     <div class="flex-container">
 <div class="drink-container">
-    <button id="random-drink-button">Make me a drink!</button>
     <h2 id="drink-title"></h2>
     <ul id="ingredients"></ul>
     <p id="instructions"></p>
@@ -26,10 +25,14 @@
   </div>
 
   <div class="joke-container">
-    <button id="random-dad-joke-button">Get a Dad Joke</button>
     <p id="dad-joke"></p>
   </div>
 </div>
+
+<div class="button-container">
+<button id="dad-button">Reconnect with dad</button>
+</div>
+
 
     <script src="/script.js"></script>
   </body>
