Added columns for text

--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
   <body>
     <h1>Reconnect with your dad at christmas</h1>
 
-    <p>
-      Christmas is here, and so are those awkward silences at family gatherings.
-      What better way to break the ice than with a perfectly timed dad joke and
-      a festive cocktail? Whether your dad’s humor is cringe-worthy or he’s
-      secretly the king of puns, we’ve got you covered.
+    <section class="intro">
+    <p class="intro-text">
+      Christmas is here, and so are those awkward silences at family gatherings. What better way to break the ice than with a perfectly timed dad joke and a festive cocktail?
     </p>
+
+    <p class="intro-text">
+      Whether your dad’s humor is cringe-worthy or he’s secretly the king of puns, we’ve got you covered with our drink-and-dad-joke-generator!
+    </p>
+  </section>
 
     <div class="flex-container">
 <div class="drink-container">
