Alignment for img and button

--- a/index.html
+++ b/index.html
@@ -4,38 +4,46 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drink and dad joke</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>Reconnect with your dad at christmas</h1>
 
     <section class="intro">
-    <p class="intro-text">
-      Christmas is here, and so are those awkward silences at family gatherings. What better way to break the ice than with a perfectly timed dad joke and a festive cocktail?
-    </p>
+      <div class="intro-text-container">
+        <p class="intro-text">
+          Christmas is here, and so are those awkward silences at family
+          gatherings. What better way to break the ice than with a perfectly
+          timed dad joke and a festive cocktail?
+        </p>
 
-    <p class="intro-text">
-      Whether your dad’s humor is cringe-worthy or he’s secretly the king of puns, we’ve got you covered with our drink-and-dad-joke-generator!
-    </p>
-  </section>
+        <p class="intro-text">
+          Whether your dad’s humor is cringe-worthy or he’s secretly the king of
+          puns, we’ve got you covered with our drink-and-dad-joke-generator!
+        </p>
+      </div>
+      
+      <div class="intro-img-container">
+        <img src="/assets/intro-img.png" />
+      </div>
+    </section>
 
     <div class="flex-container">
-<div class="drink-container">
-    <h2 id="drink-title"></h2>
-    <ul id="ingredients"></ul>
-    <p id="instructions"></p>
-    <img class="drink-image" src="" alt="" />
-  </div>
+      <div class="drink-container">
+        <h2 id="drink-title"></h2>
+        <ul id="ingredients"></ul>
+        <p id="instructions"></p>
+        <img class="drink-image" src="" alt="" />
+      </div>
 
-  <div class="joke-container">
-    <p id="dad-joke"></p>
-  </div>
-</div>
+      <div class="joke-container">
+        <p id="dad-joke"></p>
+      </div>
+    </div>
 
-<div class="button-container">
-<button id="dad-button">Reconnect with dad</button>
-</div>
-
+    <div class="button-container">
+      <button id="dad-button">Reconnect with dad</button>
+    </div>
 
     <script src="/script.js"></script>
   </body>
