Imported dancing script font and added color variables

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <section class="intro">
       <div class="intro-text-container">
         <p class="intro-text">
-          Christmas is here, and so are those awkward silences at family
-          gatherings. What better way to break the ice than with a perfectly
+          Christmas is here, and so are the chance to finally get the approval from you dad you never got. What better way to break the ice than with a perfectly
           timed dad joke and a festive cocktail?
         </p>
 
@@ -22,7 +21,7 @@
           puns, we’ve got you covered with our drink-and-dad-joke-generator!
         </p>
       </div>
-      
+
       <div class="intro-img-container">
         <img src="/assets/intro-img.png" />
       </div>
