--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drink and dad joke</title>
     <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="fonts.css">
   </head>
   <body>
     <h1>Reconnect with your dad at christmas</h1>
