Some styling for drink and joke cards

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
     </section>
 
-    <div class="flex-container">
+    <div class="content-container">
       <div class="drink-container">
         <h2 id="drink-title"></h2>
         <ul id="ingredients"></ul>
