Added eventlistener to display content on button click

--- a/index.html
+++ b/index.html
@@ -30,13 +30,15 @@
 
     <div class="content-container">
       <div class="drink-container">
-        <h2 id="drink-title"></h2>
+        <h2>Cocktail:</h2>
+        <h3 id="drink-title"></h3>
         <ul id="ingredients"></ul>
         <p id="instructions"></p>
         <img class="drink-image" src="" alt="" />
       </div>
 
       <div class="joke-container">
+        <h2>Joke:</h2>
         <p id="dad-joke"></p>
       </div>
     </div>
