Changed converter unit from ml to cl

--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     
     <label for="from-unit">From:</label>
     <select id="from-unit">
-        <option value="ml">Milliliters</option>
-        <option value="fl-oz">Fluid Ounces</option>
+      <option value="oz">oz</option>
+        <option value="cl">Centiliters</option>
         <option value="cups">Cups</option>
         <option value="tsp">Teaspoons</option>
         <option value="tbsp">Tablespoons</option>
@@ -66,8 +66,8 @@
     
     <label for="to-unit">To:</label>
     <select id="to-unit">
-        <option value="ml">Milliliters</option>
-        <option value="fl-oz">Fluid Ounces</option>
+        <option value="cl">Centiliters</option>
+        <option value="oz">oz</option>
         <option value="cups">Cups</option>
         <option value="tsp">Teaspoons</option>
         <option value="tbsp">Tablespoons</option>
