Added new font for joke and new styling for cards

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
 
     <div class="content-container">
       <div class="drink-container">
+        <div class="drink-text-wrapper">
         <h2>Cocktail:</h2>
         <h3 id="drink-title"></h3>
         <ul id="ingredients"></ul>
         <p id="instructions"></p>
+      </div>
+      <div class="drink-img-wrapper">
         <img class="drink-image" src="" alt="" />
+      </div>
       </div>
 
       <div class="joke-container">
