Made intro section 100vh

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
       </div>
     </section>
 
+    <section class="content">
     <div class="content-container">
       <div class="drink-container">
         <div class="drink-text-wrapper">
@@ -87,7 +88,7 @@
         <p id="result"></p>
       </div>
     </div>
-
+  </section>
     <script src="/script.js"></script>
   </body>
 </html>
