Added sober-button with styling

--- a/index.html
+++ b/index.html
@@ -46,10 +46,12 @@
           <h3 id="drink-title"></h3>
           <ul id="ingredients"></ul>
           <p id="instructions"></p>
+          <button id="sober-button">Sober dad? Click for non-alcoholic cocktail!</button>
         </div>
         <div class="drink-img-wrapper">
           <img class="drink-image" src="" alt="" />
         </div>
+        
       </div>
 
       <div class="joke-container">
