--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h3 id="drink-title"></h3>
           <ul id="ingredients"></ul>
           <p id="instructions"></p>
-          <button id="sober-button">Sober dad? Click for non-alcoholic cocktail!</button>
+          <button id="sober-button">Sober dad? Click here for a non-alcoholic cocktail!</button>
         </div>
         <div class="drink-img-wrapper">
           <img class="drink-image" src="" alt="" />
