Fixed file paths not working

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="intro-img-container">
-        <img src="/assets/intro-img.png" />
+        <img src="assets/intro-img.png" />
       </div>
     </section>
 
@@ -91,6 +91,6 @@
       </div>
     </div>
   </section>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
